# lib/spendable/accounts/schemas/user.ex
@@ -2,20 +2,23 @@ defmodule Spendable.Accounts.Schemas.User do
   @moduledoc false
   use Spendable.Schema
 
+  alias Spendable.Accounts.Schemas.UserIdentity
+
   @primary_key {:id, UXID, autogenerate: true, prefix: "usr"}
   schema "users" do
     field :bank_limit, :integer, default: 0
-    field :external_id, :string
+    field :email, :string
     field :image, :string
-    field :provider, :string
+
+    has_many :user_identities, UserIdentity
 
     timestamps()
   end
 
   def changeset(user \\ %__MODULE__{}, attrs) do
     user
-    |> cast(attrs, [:bank_limit, :external_id, :image, :provider])
-    |> validate_required([:bank_limit, :external_id, :provider])
-    |> unique_constraint(:external_id)
+    |> cast(attrs, [:bank_limit, :email, :image])
+    |> validate_required([:bank_limit])
+    |> unique_constraint(:email)
   end
 end
